--- a/.github/workflows/scaffold_pkg_via_branch_push.yml
+++ b/.github/workflows/scaffold_pkg_via_branch_push.yml
@@ -93,7 +93,7 @@ jobs:
         run: |
           if [[ ${{ github.event.push.head.ref }} =~ ^scaffold-([0-9]+) ]]; then
             echo "Branch name contains an issue number: ${BASH_REMATCH[1]}"
-            echo "::set-output name=issue-number::${BASH_REMATCH[1]}"
+            echo "issue-number=${BASH_REMATCH[1]}" >> $GITHUB_OUTPUT
           fi
 
       # Add a comment to the pull request:
