--- a/.github/workflows/markdown_links.yml
+++ b/.github/workflows/markdown_links.yml
@@ -94,7 +94,7 @@ jobs:
           # Define the path to a utility for validating links:
           validate="${root}/lib/node_modules/@stdlib/_tools/links/validate/bin/cli"
 
-          ${validate} "${{ steps.results.outputs.all_links }}"
+          ${validate} '${{ steps.results.outputs.all_links }}'
 
       # Log the results:
       - name: 'Log results'
