--- a/.github/workflows/lint_random_files.yml
+++ b/.github/workflows/lint_random_files.yml
@@ -362,7 +362,7 @@ jobs:
 
       # Lint license headers:
       - name: 'Lint license headers'
-        if: ${{ github.event.inputs.license }} && ( success() || failure() )
+        if: success() || failure()
         run: |
           files=$(echo "${{ steps.random-files.outputs.files }}" | tr ',' ' ')
           if [[ -n "${files}" ]]; then
@@ -371,12 +371,13 @@ jobs:
 
       # Disable Git hooks:
       - name: 'Disable Git hooks'
+        if: ${{ github.event.inputs.fix == 'true' }} && ( success() || failure() )
         run: |
           rm -rf .git/hooks
 
       # Create a pull request with the fixes (if applicable):
       - name: 'Create pull request'
-        if: ${{ github.event.inputs.fix }} && ( success() || failure() )
+        if: ${{ github.event.inputs.fix == 'true' }} && ( success() || failure() )
         id: cpr
         uses: peter-evans/create-pull-request@v4
         with:
