--- a/.github/workflows/update_contributors.yml
+++ b/.github/workflows/update_contributors.yml
@@ -34,7 +34,7 @@ on:
 jobs:
 
   # Define a job for updating the contributors list...
-  update:
+  update-contributors:
 
     # Define a display name:
     name: 'Update Contributors List'
@@ -63,7 +63,11 @@ jobs:
 
           # Specify whether to download Git-LFS files:
           lfs: false
-        timeout-minutes: 10
+
+      # Print the contributor list:
+      - name: 'Print contributor list'
+        run: |
+          make list-contributors
 
       # Run the makefile target for updating the contributors list:
       - name: 'Update contributors list'
